Adding dynamic dispatch examples and std::string